<resources>
    <string name="app_name">RestaurantFinder</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">VERIFY</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="text_continue">CONTINUE</string>
    <string name="enter_city">Enter city</string>
    <string name="search">SEARCH</string>
    <string name="restaurant_finder">Restaurant Finder</string>
    <string name="sort_by">SORT BY</string>
    <string name="increasing_rating">Increasing Rating</string>
    <string name="decreasing_rating">Decreasing Rating</string>
    <string name="title_activity_maps">Map</string>
    <string name="locate">Locate</string>
    <string name="view_url">View URL</string>
</resources>
