<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pic4">

        <RelativeLayout
            android:id="@+id/rl_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/tv_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_80dp"
                android:background="@drawable/tv_shape_selector"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:paddingStart="@dimen/size_18dp"
                android:paddingTop="@dimen/size_10dp"
                android:paddingEnd="@dimen/size_18dp"
                android:paddingBottom="@dimen/size_10dp"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_otp"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/size_50dp"
                android:background="@drawable/button_shape_selector"
                android:paddingStart="@dimen/size_30dp"
                android:paddingLeft="@dimen/size_30dp"
                android:paddingTop="@dimen/size_5dp"
                android:paddingEnd="@dimen/size_30dp"
                android:paddingBottom="@dimen/size_5dp"
                android:text="@string/verify"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_verify"
                android:layout_marginTop="@dimen/size_20dp"
                android:background="@drawable/tv_hover_selector"
                android:text="@string/resend_otp"
                android:textColor="@color/color_white"
                android:textStyle="italic" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>